[package]
name = "currency_layer"
version = "0.1.2"
authors = ["Ryan Bluth <ryanbluth93@gmail.com>"]
description = "Client for free currency layer APIs"
categories = ["api-bindings"]
repository = "https://github.com/RyanBluth/currency-layer-rs"
license = "MIT"
readme = "README.md"
keywords = ["currency", "layer", "exchange", "rate", "rates"]
edition = "2018"

[dependencies]
serde = "1.0.123"
serde_json = "1.0.59"
serde_derive = "1.0.123"
reqwest = "0.11.0"
failure = "0.1.8"
